# devops-testing

./: README.md
.github/workflows/: agent-echo.yml  intent-classifier.yml  reusable-service.yml  terraform.yml
charts/agent-integration/: .helmignore  README.md  values.yaml
charts/agent-integration/templates/: _helpers.tpl  configmap.yaml  resourcequota.yaml
devops-platform/: .gitignore
devops-platform/.github/: CODEOWNERS
devops-platform/.github/workflows/: chart-lint.yml  platformctl.yml
devops-platform/charts/agent-integration/: Chart.yaml
devops-platform/docs/: AZURE_DEMO_RUNBOOK.md  DEMO_VIDEO_SCRIPT.md  INSTALL_PREREQS.md  NEXT_STEPS.md  grafana-agent-echo.json
devops-platform/platformctl/platformctl/: __init__.py  cli.py
devops-platform/platformctl/tests/: test_render.py
devops-platform/scripts/: seed-openrouter-secret.sh
devops-platform/services/agent-echo/: Dockerfile  README.md
devops-platform/services/intent-classifier/: pyproject.toml
docs/: ARCHITECTURE.md  INTERVIEW_TALKING_POINTS.md  LOCAL_DEMO_RUNBOOK.md
gitops/argocd/: README.md
gitops/argocd/projects/: tenants.yaml
gitops/argocd/tenants/: acme.yaml  (+1 more)
platformctl/: README.md  pyproject.toml
platformctl/platformctl/: cli.py
platformctl/platformctl/templates/: tenant-app.yaml.j2
scripts/: bootstrap-azure.sh  bootstrap-local.sh  smoke-test.sh
services/agent-echo/: .dockerignore  Dockerfile  pyproject.toml
services/agent-echo/app/: config.py  main.py  openrouter.py
services/agent-echo/tests/: test_respond.py
services/intent-classifier/: Dockerfile  README.md
(+47 files in other folders)
